--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "poc-masterarbeit-walger-ss22",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://tolja.github.io/poc-masterarbeit-ss22/",
   "dependencies": {
     "formik": "^2.2.9",
     "react": "^17.0.2",
@@ -11,6 +12,8 @@
     "yup": "^0.32.11"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -35,6 +38,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^4.0.0",
     "sass": "^1.54.5"
   }
 }
